# kernel-manager

./: .gitignore  CMakeLists.txt  README.md  cachyoskm_locale.qrc  meson.build
.github/workflows/: build.yml  checks.yml
cmake/: StandardProjectSettings.cmake
config-option-lib/: Cargo.toml  build.rs
config-option-lib/src/: lib.rs  scx_loader_config.rs
lang/: cachyos-kernel-manager_cs.ts  cachyos-kernel-manager_de.ts  cachyos-kernel-manager_pl.ts  cachyos-kernel-manager_ru.ts  cachyos-kernel-manager_sk.ts  cachyos-kernel-manager_tr.ts
src/: alpm_utils.cpp  alpm_utils.hpp  aur_kernel.cpp  compile_options.json  conf-options-page.ui  conf-window.cpp  conf-window.hpp  config-options.cpp  config-options.hpp  kernel.cpp  kernel.hpp  km-window.cpp  km-window.hpp  km-window.ui  schedext-window.cpp  schedext-window.hpp  schedext-window.ui  scx_utils.cpp  scx_utils.hpp  string_utils.hpp  utils.cpp  utils.hpp
