[package]
name = "config-option-lib"
version = "0.1.0"
build = "build.rs"
authors = ["Vladislav Nepogodin <nepogodin.vlad@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", default-features = false, features = ["std"] }
cxx = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[build-dependencies]
cxx-build = "1"

[lib]
crate-type = ["staticlib"]

[profile.release]
strip = "symbols"
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
